--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "cartstoreapp",
-    "slug": "cartstoreapp",
+    "name": "themarche",
+    "slug": "themarche",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
