--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.6",
+    "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
@@ -22,7 +25,17 @@
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-react": "^7.18.6",
+    "@storybook/addon-actions": "^7.0.2",
+    "@storybook/addon-knobs": "^7.0.0",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^6.5.2",
+    "@storybook/addon-ondevice-knobs": "^6.5.2",
+    "@storybook/react-native": "^6.5.2",
+    "@storybook/react-native-server": "^5.3.23",
+    "babel-loader": "^8.3.0",
+    "tailwindcss": "^3.3.1"
   },
   "private": true
 }
